Primeira versao do jogo
Jogo feito em javascript ,html 5 e bootstrap.

Armazenamento "LocalStorage" html 5.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
           <h1>
 <a name="traduzindo" class="anchor" href="#traduzindo"><span class="octicon octicon-link"></span></a>Traduzindo</h1>
 
-<p>Jogo de tradução de palavras utilizando JS, HTML 5 e BootStrap.</p>
+<h3>Jogo de tradução de palavras utilizando JS, HTML 5 e BootStrap.</h3>
+<br>
+<h2>Let's Practise</h2>
 
-<p>Let's Practise</p>
+<hr>
+
         </section>
 
         <aside id="sidebar">
+          <a href="app/traduzindo.html" class="button">
+
+            <small>Traduzindo</small>
+            Jogar
+          </a>
           <a href="https://github.com/luanrafael/Traduzindo/zipball/master" class="button">
             <small>Download</small>
             .zip file
