--- a/app/traduzindo.html
+++ b/app/traduzindo.html
@@ -40,7 +40,7 @@
 
 			</div>
 			
-			<div class="span3">
+			<div class="span3 fixed-top" >
 				<table class="table table-striped">
 					<thead>
 						<tr>
