--- a/app/traduzindo.html
+++ b/app/traduzindo.html
@@ -16,12 +16,30 @@
 	
 
 	<body class="container-fluid">
+		
+		<div class="navbar navbar-static-top navbar-inverse">
+		  <div class="navbar-inner">
+		    <a class="brand" href="../index.html">Traduzindo</a>
+		    <ul class="nav">
+		      <li><a href="#"><strong>Acertos: <span id="acertos"/></strong></a></li>
+		      <li class="divider-vertical"></li>
+		      <li><a href="#"><strong>Erros: <span id="erros"/></strong></a></li>
+		      <li class="divider-vertical"></li>
+		      <li><a href="#"><strong>Faltam: <span id="total"/></strong></a></li>
+		    </ul>
+
+		    <ul class="nav pull-right">
+		      <li><a class="brand" onclick="showAll(this)" data-text="1" >Mostrar Todos</a></li>
+		      <li class="divider-vertical"></li>
+		      <li><a class="brand" onclick="reiniciar()" >## Zerar ##</a></li>
+		    </ul>
+		  </div>
+		</div>
 
 
 		<div class="row-fluid">
 
-
-			<div class="span8">
+			<div class="span4">
 
 				<table class="table table-hover">
 					<thead>
@@ -40,31 +58,6 @@
 
 			</div>
 			
-			<div class="span3 fixed-top" >
-				<table class="table table-striped">
-					<thead>
-						<tr>
-							<th>
-								ACERTOS
-							</th>
-							<th>
-								ERROS
-							</th>
-							<th>
-								FALTAM
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td id="acertos"></td>
-							<td id="erros"></td>
-							<td id="total"></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-
 		</div>
 
 	</body>
